# ai-agents

./: .gitignore  Makefile
.claude/: settings.local.json
backend/: .env.example  main.py  nixpacks.toml  pyproject.toml  railway.toml
backend/agents/: crawler_agent.py  harness_agent.py  productivity_agent.py  pydantic_agent.py
frontend/: next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agents/crawler/: page.tsx
frontend/app/agents/harness/: page.tsx
frontend/app/agents/productivity/: page.tsx
frontend/app/agents/pydantic/: page.tsx
frontend/app/api/agents/[...path]/: route.ts
frontend/components/: AgentChat.tsx  AgentPageShell.tsx  AgentSidebar.tsx  Navbar.tsx  TaskList.tsx
frontend/hooks/: useAgentStream.ts
frontend/lib/: agentContent.ts  agents.ts
